h2. 1.0.4

h3. Changes
  * options passed to #render_widget are now merged with @opts.

h3. Bugfixes
  * 


h2. 1.0.3

h3. Bugfixes
  * fixed gemspec to not require useless gem dependencies.


h2. 1.0.2

h3. Changes
  * removals from ViewHelper: #trigger_event, #form_to_event and friends as they use deprecated Rails helpers.
  
h3. Bugfixes
  * Widget#fire now accepts payload data for the fired event.
  * triggered states now receive the event object if they expect one argument.